# xunjian_code

./: test.txt
carto_ws/: run_cmd.md
ft_robot_ws/: amcl.sh  base.sh  gmapping.sh  http.sh  laser.sh  laserscan_to_pointcloud.sh  m.sh  map.pgm  map.yaml  map_sav.sh  map_server.sh  master.sh  my_amcl.sh  nav.sh  point.sh  re_amcl.sh  start.sh  uart.sh  voice.sh
ft_robot_ws/src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
ft_robot_ws/src/turn_on_wheeltec_robot/include/: wheeltec_robot.h
ft_robot_ws/src/turn_on_wheeltec_robot/launch/: 3d_mapping.launch  3d_navigation.launch  mapping.launch  navigation.launch  robot_model_visualization.launch  turn_on_wheeltec_robot.launch  wheeltec_lidar.launch
ft_robot_ws/src/turn_on_wheeltec_robot/launch/include/: amcl.launch  base_serial.launch  dwa_local_planner.launch  robot_pose_ekf.launch  teb_local_planner.launch
ft_robot_ws/src/turn_on_wheeltec_robot/map/: WHEELTEC.pgm  WHEELTEC.yaml  WHEELTEC_end.yaml  ft_map.pgm  ft_map.yaml  ft_map_end.yaml
ft_robot_ws/src/turn_on_wheeltec_robot/params_costmap_car/param_top_4wd_dl/: costmap_car_params.yaml
ft_robot_ws/src/turn_on_wheeltec_robot/params_costmap_car/param_top_akm_dl/: costmap_car_params.yaml  teb_local_planner_params.yaml
ft_robot_ws/src/turn_on_wheeltec_robot/params_costmap_common/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ft_robot_ws/src/turn_on_wheeltec_robot/params_nav_common/: base_global_planner_param.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ft_robot_ws/src/turn_on_wheeltec_robot/scripts/: wheeltec_udev.sh
ft_robot_ws/src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
(+172 files in other folders)
